# v-chess

./: .gitignore  __init__.py  __main__.py  board.py  board_utils.py  check_users.py  chess.db  game.py  migrate_db.py  move.py  move_utils.py  pyproject.toml  requirements.txt  square.py  start_prod.sh
backend/: database.py  engine.py  main.py  rating.py  schemas.py  socket_manager.py  state.py
chess/: __main__.py  board.py  coordinate.py  enums.py  game.py  move.py  move_utils.py  square.py
frontend/: package-lock.json  package.json
oop_chess/: __main__.py  bitboard.py  board.py  enums.py  fen_helpers.py  game.py  game_state.py  move.py  rules.py  square.py
piece/: bishop.py  color.py  king.py  knight.py  pawn.py  piece.py  queen.py  rook.py
pieces/: bishop.py  king.py  knight.py  move_utils.py  movement.py  pawn.py  piece.py  queen.py  rook.py
scripts/: safe_commit.sh
tests/: conftest.py  diagnose_ambiguous_king.py  example_games.pgn  lichess_game_2026-01-07(1).pgn:Zone.Identifier  test_antichess.py  test_board.py  test_check.py  test_checkmate.py  test_full_game.py  test_full_game_antichess.py  test_full_game_atomic.py  test_full_game_chess960.py  test_full_game_crazyhouse.py  test_full_game_horde.py  test_full_game_koth.py  test_full_game_racing_kings.py  test_full_game_three_check.py  test_move_init_promotion.py  test_pawn.py  test_pawn_blockage.py  test_piece.py  test_pieces.py  test_pseudo_legal_moves.py  test_san.py  test_self_capture.py  test_square.py  test_theoretical_moves.py  test_threefold_repetition.py  variant_games.pgn  variant_test_utils.py
(+327 files in other folders)
